
[[v2.3.0]]
v2.3.0 (unreleased)
-------------------

Added
~~~~~

- New `content.prefers_reduced_motion` setting to request websites to reduce
  non-essential motion/animations.

Changed
~~~~~~~

- The `fonts.web.*` settings now support URL patterns.
- The `:greasemonkey-reload` command now shows a list of loaded scripts and has
  a new `--quiet` switch to suppress that message.

[[v2.2.3]]
v2.2.3 (2021-06-01)
-------------------

Fixed
~~~~~

- Logging into Google accounts or sharing the camera on macOS 10.14+ crashed,
  which is now fixed.
- The Windows installer now correctly aborts the installation on Windows 7
  (rather than attempting an install which won't work, since Windows 7 is
  unsupported since the v2.0.0 release).
- Using `--json-logging` without `--debug` caused qutebrowser to crash since the
  v1.13.0 release. It now works correctly again.
- Mixing Qt 5.14+ with QtWebEngine 5.12 caused a crash related to qutebrowser's
  notification support, which is now fixed.
- The documentation now points to the new IRC channels on irc.libera.chat
  instead of the defunct Freenode channels (due to a hostile takeover by
  Freenode staff).
- Setting `content.headers.user_agent` or `.accept_language` to a value
  containing non-ascii characters was permitted by qutebrowser, but resulted in
  a crash when loading a page. Such values are now rejected properly.
- When quitting qutebrowser on the `qute://settings` page, a crash could happen, which is now fixed.
- When `:edit-text` is used, but the existing text in the input isn't
  representable in the configured encoding (`editor.encoding`), qutebrowser would
  crash. It now shows a proper error instead.
- The testsuite should now work properly on aarch64.
- When QtWebEngine is in a "stuck" state while `:selection-follow` was used,
  this could cause a crash in qutebrowser. This is now fixed (speculatively, due
  to lack of a reproducer).
- When the brave adblock data (`adblock-cache.dat`) got corrupted, qutebrowser